--- a/index.html
+++ b/index.html
@@ -1,45 +1,96 @@
 <!DOCTYPE html>
 <html lang="en">
-
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/css/bootstrap.min.css" rel="stylesheet"
-        integrity="sha384-+0n0xVW2eSR5OomGNYDnhzAbDsOXxcvSN1TPprVMTNDbiYZCxYbOOl7+AMvyTG2x" crossorigin="anonymous">
-</head>
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-+0n0xVW2eSR5OomGNYDnhzAbDsOXxcvSN1TPprVMTNDbiYZCxYbOOl7+AMvyTG2x"
+      crossorigin="anonymous"
+    />
+  </head>
 
-<body>
+  <body>
     <div class="container mb-3">
-        <div class="card" style="width: 18rem;">
-            <img class="card-img-top d-none" src="" alt="Card image cap" data-shiny-url="">
-            <div class="card-body">
-                <h5 class="card-title" style=" text-transform: capitalize;">Lorepokemon</h5>
-                <a href="#" class="btn btn-success">Change to Shiny</a>
-            </div>
+      <div class="card" style="width: 18rem">
+        <img
+          class="card-img-top d-none"
+          src=""
+          alt="Card image cap"
+          data-shiny-url=""
+        />
+        <div class="card-body">
+          <h5 class="card-title" style="text-transform: capitalize">
+            Lorepokemon
+          </h5>
+          <a href="#" class="btn btn-success">Change to Shiny</a>
         </div>
+      </div>
     </div>
     <div class="container">
-        <div class="input-group mb-3">
-            <span class="input-group-text" id="selected-pokemon-label">Which pokemon do you want to display?</span>
-            <select id="select-pokemon" class="form-select" aria-label="selected pokemon" aria-describedby="selected-pokemon-label">
-                <option selected>Select one pokemon</option>
-                <option value="pikachu">Pikachu</option>
-                <option value="charmander">Charmander</option>
-                <option value="luxio">Luxio</option>
-            </select>
-        </div>
+      <div class="input-group mb-3">
+        <span class="input-group-text" id="selected-pokemon-label"
+          >Which pokemon do you want to display?</span
+        >
+        <select
+          id="select-pokemon"
+          class="form-select"
+          aria-label="selected pokemon"
+          aria-describedby="selected-pokemon-label"
+        >
+          <option selected>Select one pokemon</option>
+          <option value="pikachu">Pikachu</option>
+          <option value="charmander">Charmander</option>
+          <option value="luxio">Luxio</option>
+        </select>
+      </div>
     </div>
-</body>
-<script>
+  </body>
+  <script>
     // 1. Cuando cambie el valor del selector, tenemos que detectar que opción hemos escogido. Probad que sois capaces de recuperar el valor seleccionado por el usuario con un console.log
+    // 1. Seleccionamos el <select>
+    // 2. Capturamos el evento 'change'
+    document
+      .querySelector("#select-pokemon")
+      .addEventListener("change", (event) => {
+        // 3. en el objeto event tenemos información sobre el evento que acaba de ocurrir
+        // 3.1 En la propiedad event.target tenemos el elemento del DOM que disparado dicho evento
+        // 3.2 La propiedad event.target.value nos da el valor de la opción seleccionada.
 
-    // 2. En función de la opción escogida, 'montaremos' una URL
-    // https://pokeapi.co/api/v2/pokemon/pikachu
-    // https://pokeapi.co/api/v2/pokemon/luxio
+        const selectedPokemon = event.target.value;
+        getPokemonFromAPI(selectedPokemon);
+      });
 
-    // 3. Utilizar la función fetch para hacer la llamada a esa URL
-    // y procesar los datos. Significa, asignar al <h5> del DOM el nombre del pokemon que hemos recuperado de la llamada. Y en la etiqueta <img> debemos establecer el atricuto 'src' con el valor de la URL donde se ubica la imagen del pokemon
-</script>
+    async function getPokemonFromAPI(pokemonName) {
+      // De hacer una llamada a la API:   // https://pokeapi.co/api/v2/pokemon/{pokemonName}
+      const url = `https://pokeapi.co/api/v2/pokemon/${pokemonName}`;
 
+      console.log("URL para la petición a la API: ", url);
+      // 3. Utilizar la función fetch para hacer la llamada a esa URL
+      // y procesar los datos. Significa, asignar al <h5> del DOM el nombre del pokemon que hemos recuperado de la llamada. Y en la etiqueta <img> debemos establecer el atricuto 'src' con el valor de la URL donde se ubica la imagen del pokemon
+      getPokemonsApi(url);
+    }
+
+    async function getPokemonsApi(url) {
+      // Hago una petición a la url de la API que va cambiando en función de la opción elegida.
+      let respuesta = await fetch(url);
+      let datos = await respuesta.json();
+      updatePokemonInfo(datos.name);
+      console.dir(datos);
+      return datos;
+    }
+
+    function updatePokemonInfo(name, urlPokemon) {
+        console.log(name,urlPokemon);
+      const imgElement = document.querySelector("img");
+      document.querySelector("h5.card-title").textContent = name;
+      // Debemos eliminar la clase 'd-none' del <img> para que se muestre el elemento HTML
+    //   imgElement.src = urlPokemon.sprites.front_default;
+      document.querySelector("img").classList.remove("d-none");
+    }
+
+    
+  </script>
 </html>
